--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,10 @@ markdown: kramdown
 
 
 # Tracker
-analytics: UA-83979019-1
+analytics: N/A
 
 # Comments
-disqus-shortname: webjeda-demo
+disqus-shortname: N/A
 
 #optimization
 #compress.html
