--- a/_config.yml
+++ b/_config.yml
@@ -23,17 +23,38 @@ defaults:
       path: "_columns/The_Big_Picture"
     values:
       the_big_picture: true
+      lang: en
       permalink: /columns/the-big-picture/:name
+  - scope:
+      path: "_columns/The_Big_Picture/zh-cn"
+    values:
+      the_big_picture: true
+      lang: zh-cn
+      permalink: /columns/the-big-picture/zh-cn/:name
   - scope:
       path: "_columns/Stock_Of_the_Day"
     values:
       stock_of_the_day: true
+      lang: en
       permalink: /columns/stock-of-the-day/:name
+  - scope:
+      path: "_columns/Stock_Of_the_Day/zh-cn"
+    values:
+      stock_of_the_day: true
+      lang: zh-cn
+      permalink: /columns/stock-of-the-day/zh-cn/:name
   - scope:
       path: "_columns/Swing_Trading"
     values:
       swing_trading: true
+      lang: en
       permalink: /columns/swing-trading/:name
+  - scope:
+      path: "_columns/Swing_Trading/zh-cn"
+    values:
+      swing_trading: true
+      lang: zh-cn
+      permalink: /columns/swing-trading/zh-cn/:name
 
 ### exclude the instructions / write-up in the README.md
 exclude:
